# meteorsAIagentmovie

./: .env.example  .gitignore  README.md  TASK.md  agent.py  app.py  bot.py  embeddings.py  eval_retriever.py  indexer.py  merge.py  pyproject.toml  tools.py  ui.py  ui_streamlit.py
backend/: Dockerfile  agent.py  embeddings.py  indexer.py  main.py  pyproject.toml  tools.py
backend/data/db/: meta.json
frontend/: ui_streamlit.py
