[project]
name = "aiagentprocject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastembed>=0.8.0",
    "gradio>=6.19.0",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
]
